# Draw-a-holiday-calendar

./: .gitignore  CLAUDE.md  README.md  calendar_renderer.py  config copy.ini  config.ini  holiday_data_20251224_092001.json  img2img.py  main.py  parser.py  parser_openai.py  pyproject.toml  test_img2img.py  test_output_calendar.html  web_renderer.py
prompts/: __init__.py  templates.py
templates/: calendar_template.html
